  from "html4css1" to "html5".

  Use ``get_writer_by_name('html')`` or the rst2html.py_ front end, if you
  want the output to be up-to-date automatically.

  Use a specific writer name or front end, if you depend on stability of the
  generated HTML code, e.g. because you use a custom style sheet or
  post-processing that may break otherwise.

.. _id_prefix: docs/user/config.html#id-prefix
.. _auto_id_prefix: docs/user/config.html#auto-id-prefix
.. _rst2html.py: docs/user/tools.html#rst2html-py
.. _reference name: docs/ref/rst/restructuredtext.html#reference-names
.. _identifier normalization: docs/ref/rst/directives.html#identifier-normalization


Release 0.17
============

* Installing with ``setup.py`` now requires setuptools_.
  Alternatively, install with pip_.

* The generic command line front end ``docutils-cli.py`` allows the
  free selection of reader, parser, and writer components.

* HTML writers: new option to embed images.

* HTML5 writer:

  - Use the new semantic tags <main>, <section>, <header>,
    <footer>, <aside>, <figure>, and <figcaption>.
    See ``minimal.css`` and ``plain.css`` for styling rule examples.

    Change the `initial_header_level`_ setting's default to "2", as browsers
    use the `same style for <h1> and <h2> when nested in a section`__.

  - Use HTML text-level tags <small>, <s>, <q>, <dfn>, <var>, <samp>, <kbd>,
    <i>, <b>, <u>, <mark>, and <bdi> if a matching class value
    is found in `inline` and `literal` elements.
    Use <ins> and <del> if a matching class value
    is found in `inline`, `literal`, or `container` elements.

  - Wrap block-level image elements in <p> (except for figures).
    Move non-essential styling from ``minimal.css`` to ``plain.css``.
    Support numbered figures in ``plain.css``.

  .. _initial_header_level: docs/user/config.html#initial-header-level
  __ https://stackoverflow.com/questions/39547412/same-font-size-for-h1-and-h2-in-article

* LaTeX writer:
