@@ -77,6 +77,13 @@ Future changes
   generated HTML code, e.g. because you use a custom style sheet or
   post-processing that may break otherwise.
 
+* Use SOURCE_DATE_EPOCH as document date.
+
+  If environment variable `SOURCE_DATE_EPOCH` is set, then this unix epoch
+  is used as the document date. Among others the `date` directive and ODT
+  creation-date is set to this date.
+
+
 .. _id_prefix: docs/user/config.html#id-prefix
 .. _auto_id_prefix: docs/user/config.html#auto-id-prefix
 .. _rst2html.py: docs/user/tools.html#rst2html-py
